--- a/GitHub Actions/WebApp-as-Container-on-AKS.yml
+++ b/GitHub Actions/WebApp-as-Container-on-AKS.yml
@@ -3,6 +3,9 @@ on:
   push:
     branches:
       - master
+  pull_request:
+    branches:
+      - develop
 
 env:
   RESOURCEGROUPNAME: "ai-disneyaks-rg"
